samples/_failures_safe/1761692081_7bd734_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1484205.c: In function ‘main’:
./samples/SAFE/__tmp_f1484205.c:167:9: error: expected identifier at end of input
  167 |         .
      |         ^
./samples/SAFE/__tmp_f1484205.c:167:9: error: expected declaration or statement at end of input
